Complete SQLite migration and add database versioning
- Remove PostgreSQL dependencies (pg, pg-hstore)
- Update models to use SQLite exclusively
- Add DATABASE_VERSIONING.md guide
- Update .env.example for SQLite
- Update admin.html with agency fields
- All API endpoints tested and working

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,6 @@
 # Database configuration
-# Set DB_DIALECT=postgres to use Postgres, otherwise SQLite is used
-DB_DIALECT=sqlite
-# For Postgres:
-# DB_HOST=localhost
-# DB_PORT=5432
-# DB_NAME=fandirent
-# DB_USER=postgres
-# DB_PASS=yourpassword
+# SQLite database file location
+SQLITE_STORAGE=fandicars.db
 
+# Server port
 PORT=3001
