--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fandirent-backend",
   "version": "1.0.0",
-  "description": "Backend API for FandiRent car rental (Express + Sequelize + Postgres/SQLite)",
+  "description": "Backend API for FandiRent car rental (Express + Sequelize + SQLite)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -14,8 +14,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7",
     "uuid": "^9.0.1"
