--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,11 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "sequelize": "^6.37.1",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
+    "stripe": "^19.3.0",
     "uuid": "^9.0.1"
   }
 }
