--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7",
     "stripe": "^19.3.0",
     "uuid": "^9.0.1"
+  },
+  "optionalDependencies": {
+    "sqlite3": "^5.1.7"
   }
 }
