--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "seed": "node seed.js"
+    "seed": "node seed.js",
+    "build": "echo 'Build complete - ready for Netlify'"
   },
   "author": "",
   "license": "MIT",
@@ -17,6 +18,7 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "serverless-http": "^3.2.0",
     "stripe": "^19.3.0",
     "uuid": "^9.0.1"
   },
