Add payment method tracking system with 4 payment options
- Add payment fields to Reservation model (paymentMethod, paymentStatus, transaction IDs, screenshots, receipts, notes)
- Update POST/PUT /reservations endpoints to handle payment data
- Implement 4 payment options: Stripe, PayPal, Bank Transfer, Reserve Without Payment
- Add payment info display in admin.html with color-coded badges and icons
- Add payment details section in new-reservations.html
- Add PayPal screenshot capture with base64 conversion
- Add Stripe payment intent ID tracking
- Update payment pages to send proper payment metadata
- Improve database configuration error messages
- Add Railway setup documentation

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,12 +12,12 @@
   to = "/.netlify/functions/api/:splat"
   status = 200
 
-# SPA routing - toutes les routes vers index.html
+# SPA routing - toutes les routes HTML vers index.html (sauf les fichiers statiques)
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-  conditions = {Role = ["admin", "user"]}
+  force = false
 
 # Headers de sécurité
 [[headers]]
