--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
-    "seed": "node seed.js",
-    "build": "echo 'Build complete - ready for Netlify'"
+    "seed": "node backend/seed.js"
   },
   "author": "",
   "license": "MIT",
@@ -15,14 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
-    "pg": "^8.16.3",
-    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
-    "serverless-http": "^3.2.0",
+    "sqlite3": "^5.1.7",
     "stripe": "^19.3.0",
     "uuid": "^9.0.1"
-  },
-  "optionalDependencies": {
-    "sqlite3": "^5.1.7"
   }
 }
