Add Car Type feature with 4-layer architecture + database
Database Layer:
- Added carType field to Car model with validation
- 6 types: Berline, SUV, Citadine, Luxe, Utilitaire, Monospace
- Default: Berline

API Layer:
- Updated POST/PUT /cars endpoints to handle carType

Admin Interface:
- Added carType dropdown to Add/Edit forms
- Updated JavaScript functions

User Interface:
- Added carType badge display on car cards
- Fixed loadCarsFromAPI to include all properties

Seed Data:
- 11 cars with proper car types
- Payment methods added to reservations

Documentation:
- Created FEATURE_DEVELOPMENT_WORKFLOW.md guide
- Added utility scripts (view-cars.js, view-reservations.js)

Database:
- fandicars.db now tracked in git for version control
- Updated .gitignore to allow database commits

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ coverage/
 .env
 .env.*
 
-# Database
-backend/database.sqlite
-*.db
-*.sqlite
+# Database (commented out to track database in git for version control)
+# backend/database.sqlite
+# *.db
+# *.sqlite
