--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "node server.js",
     "seed": "node seed.js",
-    "migrate": "node ./Deploy/start-migrate.js",
+  "migrate": "node ../Deploy/start-migrate.js",
     "start:prod": "NODE_ENV=production node server.js"
   },
   "author": "",
