--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "fandirent-backend",
+  "name": "fandiapprentcars-root",
+  "private": true,
   "version": "1.0.0",
-  "description": "Backend API for FandiRent car rental (Express + Sequelize + SQLite)",
-  "main": "server.js",
+  "description": "Root proxy package.json for Railway (backend in ./backend)",
+  "main": "backend/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js",
-    "seed": "node backend/seed.js"
+    "start": "node backend/server.js",
+    "start:prod": "NODE_ENV=production node backend/server.js",
+    "seed": "node backend/seed.js",
+    "migrate": "node Deploy/start-migrate.js"
   },
   "author": "",
   "license": "MIT",
@@ -14,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
     "stripe": "^19.3.0",
