Production deployment ready - consolidated backend + optimizations
 Removed root server.js duplication (backend/server.js is source of truth)
 Updated railway.toml with correct build and deploy configuration
 Added compression middleware for better performance
 Added trust proxy settings for Railway/Heroku
 Added comprehensive 404 handler with JSON fallback for API routes
 Added global error handler with production/dev mode support
 Created custom 404.html page with FANDIAUTO branding
 Regenerated database with correct schema (carType, payment fields)
 All HTML files confirmed in public/ directory
 Compression npm package installed

Server now ready for production deployment on Railway with:
- Proper static file serving (public/ directory)
- API endpoints with error handling
- Graceful 404 handling
- Production optimizations (compression, proper headers)
- Health check endpoint
- Auto-seeding on first run

--- a/railway.toml
+++ b/railway.toml
@@ -1,3 +1,7 @@
-[service]
-name = "fandi-backend"
-start = "npm run migrate && npm run start:prod"
+[build]
+builder = "nixpacks"
+
+[deploy]
+startCommand = "npm start"
+restartPolicyType = "on_failure"
+restartPolicyMaxRetries = 10
